# emulator

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README  build.sh  dist.sh  emu-root-read.C  gauss-simple.txt  gauss.txt  interactive_emulator  interactive_emulator.1  mathematica-model.txt  readme-dist.txt  run2d.sh  smash.cl  version.sh
examples/: 2d-regression.R  r-simple.R  simple-regression.R
py-lhs/: lhspython.py
r-fns/: 1d-test-data.R  EmuRbind.R  demoPlot.R  emulator-test-data.R  emulator1d.R  make2dtest.R  makePresPlots.sh  metropolis.R  plotCovReals.R  plotSamples.R  plotSplits.R  presentPlot.R  splitTest.R  testEval.R  testRbind.R  tryOU.R
src/: CMakeLists.txt  EmuPlusPlus.cpp  EmuPlusPlus.h  Makefile  SConstruct  TAGS  array-test.c  bin_support.c  bin_support.h  buildConfig.h.in  call-sblc.cl  coverage.c  defaults.h  emulator-main.c  emulator.c  emulator.h  emulator_struct.c  emulator_struct.h  emuplusplus.cpp  emuplusplus.h  estimate_threaded.c  estimate_threaded.h  estimator-test.c  estimator.c  estimator.h  grad-testing.c  interactive_emulator.c  ioread.c  ioread.h  likelyhoody.c  main.c  main.h  maximise.c  maximise.h  modelstruct.c  modelstruct.h  multi-drive.c  multi_modelstruct.c  multi_modelstruct.h  multifit.c  (+18 more)
src/libEmu/: CMakeLists.txt  Makefile  SConstruct  bfgs.c  bfgs.h  emulate-fns.c  emulate-fns.h  emulator.c  emulator.h  estimate_threaded.c  estimate_threaded.h  estimator-fns.c  estimator-fns.h  estimator.c  estimator.h  lbfgs.c  lbfgs.h  maxbfgs.c  maxbfgs.h  maximise.c  maximise.h  maxlbfgs.c  maxlbfgs.h  maxmultimin.c  maxmultimin.h  regression.c  regression.h
src/libEmu/lbfgs/: SConstruct  routines.f
src/libEmu/oldRoutines/: bfgs.c  maximise.h  maxlbfgs.h
src/libRbind/: CMakeLists.txt  EmuRbind.R  emuOverDesign.R  implausOverDesign.R  multivar.R  rbind.c  rbind.h  testConv.R  testEst.R  testInterp.R  testRbind.R
src/libSA/: 15d-oak-ohagan-data-sample.txt  6d-oak-ohagan-data-sample.txt  analytic-sa.R  make-samples.R  sa-drive.R  sa-fns.R  sensitivity-data.txt  test-fns.R  thetas.txt  trivial-model-2.txt  trivial-test-2.R  trivial-test.R
src/multi/: multihelper.h  smasher.c
src/other/: smash-lisp.cl
src/test/: Makefile  approxInverse.c  estimator-test.c  gaussian2dtest.c  grad-testing.c  linalg.c  list-test.c  test-bfgs.c  test-resize.c  testRbind.R  testRbind.c
src/test/cuda-test/: Makefile  approxInvCuda.cpp  scaling-plot.ps  test.sh
src/test/cuda-test/batchCUBLAS/: Makefile  batchCUBLAS.cpp  batchCUBLAS.h
src/test/cuda-test/simpleCUBLAS/: Makefile  simpleCUBLAS.cpp
src/utils/: likelyhoody.c  persist.h
test/: readme.txt
test/emuplusplus-test/: CMakeLists.txt  build.sh  readme.txt  sample-emu.sh  train-emu.sh
test/emuplusplus-test/emu-dir/: train-emulator.sh
test/emuplusplus-test/src/: CMakeLists.txt  example.cpp
test/hal-test/: Latin_square_sampling_2d_samp_fn.R  Latin_square_sampling_2d_samp_fn.sh  plot-results2d.R  sample-emulator.sh  train-emulator.sh
test/multi-simple/: make-input.sh  make-spec.R  sample-emu.sh  train-emulator.sh
test/uni-2d-param/: sample-emulator.sh
test/uni-simple/: plot-results.R  sample-emulator.sh  train-emulator.sh
